Setup mobile version skeleton

--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+
     <title>Portfolio</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+    <!-- Setup mobile version skeleton-->
+    
+    <section class="skeleton">
+        <!--Setup the header-->
+
+        <header>
+        <a href="#" class="my-logo">My Logo</a>
+
+        <button class="menu">
+            <div class="Menu-Icon"></div>
+            <div class="Menu-Icon"></div>
+            <div class="Menu-Icon"></div>
+          </button>
+        </header>
+
+        <!--Setup the headline -->
+
+        <section  class="headline">
+            <h1>I’m Abdollah Glad to see you!</h1>
+            <p class="whoAmI">
+              I’m a software developer! 
+              I can help you build a product , 
+              feature or website Look through some of my work and experience!
+               If you like what you see and have a project you need coded, 
+               don’t hestiate to contact me.
+            </p>
+  
+            <a href="#" class="contact-link">Let's Connect</a>
+  
+            <ul>
+                <li> <a href="https://twitter.com/abdollah_raafat" target="blank" class="icon">
+                <ion-icon name="logo-twitter" class="large"></ion-icon></a></li>
+                <li><a href="https://www.linkedin.com/in/abdollah-raafat-886059221/" target="blank" class="icon">
+                <ion-icon name="logo-linkedin" class="large"></ion-icon></a></li>
+                <li><a href="https://twitter.com/abdollah_raafat" target="blank" class="icon">
+                <ion-icon name="logo-github" class="large"></ion-icon></a></li>
+                <li><a href="#" target="blank" class="icon">
+                <ion-icon name="logo-instagram" class="large"></ion-icon></a></li>
+            </ul> 
+
+        </section>
+
+
+    </section>
+    
+
+
+
+
 </body>
 </html>
