--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
     <!-- Setup mobile version skeleton-->
@@ -19,13 +16,15 @@
         <!--Setup the header-->
 
         <header>
-        <a href="#" class="my-logo">My Logo</a>
+            <nav>
+                <a href="#" class="my-logo">My Logo</a>
 
-        <button class="menu">
-            <div class="Menu-Icon"></div>
-            <div class="Menu-Icon"></div>
-            <div class="Menu-Icon"></div>
-          </button>
+                <button class="menu">
+                    <p class="Menu-Icon"></p>
+                    <p class="Menu-Icon"></p>
+                    <p class="Menu-Icon"></p>
+                </button>
+            </nav>
         </header>
 
         <!--Setup the headline -->
@@ -60,7 +59,9 @@
     
 
 
-
+    <!--Scripts-->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
