--- a/index.html
+++ b/index.html
@@ -264,19 +264,20 @@
                 a feature that you need built or a project that needs coding. 
                 I’d love to help with it </p>
 
-            <form action="#" class="contact-form">
+            <form action="https://formspree.io/f/xqkwvblb
+" class="contact-form" method="post">
                 <ul>
                     <li>
-                      <input type="text" id="name" name="user_name" placeholder="Name" class="nem">
+                      <input type="text" id="name" name="user_name" placeholder="Name" class="nem hint" required>
                     </li>
                     <li>
-                      <input type="email" id="mail" name="user_email" placeholder="E-mail" class="nem">
+                      <input type="email" id="mail" name="user_email" placeholder="E-mail" class="nem hint" required>
                     </li>
                     <li>
-                      <textarea id="msg" name="user_message" placeholder="Write your message here" class="nem"></textarea>
+                      <textarea id="msg" name="user_message" placeholder="Write your message here" class="nem" required></textarea>
                     </li>
                     <li>
-                        <button type="submit">Get It Touch</button>
+                        <button class="last-button" cltype="submit">Get It Touch</button>
                     </li>
                 </ul>
             </form>
