Add more style to the page

--- a/index.html
+++ b/index.html
@@ -257,30 +257,30 @@
         <!--Setup the contact form section -->
         
         <footer class="footer-part">
+            <section>
+                <h3 class="contact-me">Contact me</h3>
+                <p class="call-me">If you have an application you are interested in developing, 
+                    a feature that you need built or a project that needs coding. 
+                    I’d love to help with it </p>
 
-            <h3 class="contact-me">Contact me</h3>
-            
-            <p class="call-me">If you have an application you are interested in developing, 
-                a feature that you need built or a project that needs coding. 
-                I’d love to help with it </p>
-
-            <form action="https://formspree.io/f/xqkwvblb
-" class="contact-form" method="post">
-                <ul>
-                    <li>
-                      <input type="text" id="name" name="user_name" placeholder="Name" class="nem hint" required>
-                    </li>
-                    <li>
-                      <input type="email" id="mail" name="user_email" placeholder="E-mail" class="nem hint" required>
-                    </li>
-                    <li>
-                      <textarea id="msg" name="user_message" placeholder="Write your message here" class="nem" required></textarea>
-                    </li>
-                    <li>
-                        <button class="last-button" cltype="submit">Get It Touch</button>
-                    </li>
-                </ul>
-            </form>
+                <form action="https://formspree.io/f/xqkwvblb" class="contact-form" method="post">
+                    <ul>
+                        <li>
+                        <input type="text" id="name" name="user_name" placeholder="Name" class="nem hint" required>
+                        </li>
+                        <li>
+                        <input type="email" id="mail" name="user_email" placeholder="E-mail" class="nem hint" required>
+                        </li>
+                        <li>
+                        <textarea id="msg" name="user_message" placeholder="Write your message here" class="nem" required></textarea>
+                        </li>
+                        <li>
+                            <button class="last-button" cltype="submit">Get It Touch</button>
+                        </li>
+                    </ul>
+                </form>
+            </section>
+            <img src="images/shape.png" class="shape" height="5px" width="134px">
         </footer>
 
 
