--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@
                 <form action="https://formspree.io/f/xqkwvblb" class="contact-form" method="post">
                     <ul>
                         <li>
-                        <input type="text" id="name" name="user_name" placeholder="Name" class="nem hint" required>
+                        <input type="text" id="name" name="user_name" placeholder="Name" class="nem hint" maxlength="30" required>
                         </li>
                         <li>
                         <input type="email" id="mail" name="user_email" placeholder="E-mail" class="nem hint" required>
                         </li>
                         <li>
-                        <textarea id="msg" name="user_message" placeholder="Write your message here" class="nem" required></textarea>
+                        <textarea id="msg" name="user_message" placeholder="Write your message here" class="nem" maxlength="500" required></textarea>
                         </li>
                         <li>
                             <button class="last-button" cltype="submit">Get It Touch</button>
