Fix Google analytics config ID

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         function gtag(){window.dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'GA_MEASUREMENT_ID');
+        gtag('config', 'Google-Portfolio-analystics');
         </script>
     </body>
 </html>
