Fix script id for google analytics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=292684626"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-BML487QSS1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
 
@@ -19,7 +19,7 @@
             }
             gtag('js', new Date());
 
-            gtag('config', '292684626');
+            gtag('config', 'G-BML487QSS1');
         </script>
     </head>
     <body>
