Setup and style and script mobile-menu

--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
             <!--Setup the header-->
 
             <header>
-                <nav>
+
+                <nav class="mobile-nav">
                     <a href="#" class="my-logo">My Logo</a>
-                    
-                    <button class="menu">
+                    <button class="menu" id="menu-id">
                         <p class="Menu-Icon"></p>
                         <p class="Menu-Icon"></p>
                         <p class="Menu-Icon"></p>
                     </button>
+
+                </nav>
+
+                <div class="desktop-nav">
+
+                    <a href="#" class="my-logo">My Logo</a>
 
                     <a href="#work-id" class="Portoflio nav-button">
                         Portoflio
@@ -49,7 +55,26 @@
                     <a href="#contact-id" class="Contact nav-button">
                         Contact
                     </a>
-                </nav>
+                </div>
+
+                <div>
+                    <ul id="pop-list">
+                        <li>
+                            <a href="#" id="colse-Icon">X</a>
+                        </li>
+                        <li>
+                            <a href="#work-id" class="Portoflio" id="pop-buttons-1">Portoflio</a>
+                        </li>
+                        <li>
+                            <a href="#about-id" class="About-b" id="pop-buttons-2">About</a>
+                        </li>
+                        <li>
+                            <a href="#contact-id" class="Contact" id="pop-buttons-3">Contact</a>
+                        </li>
+                    </ul>
+                    
+                </div>
+
             </header>
 
             <!--Setup the headline -->
