--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div>
                     <ul id="pop-list">
                         <li>
-                            <a href="#" id="colse-Icon">X</a>
+                            <a href="#" id="close-Icon">X</a>
                         </li>
                         <li>
                             <a href="#work-id" class="Portoflio" id="pop-buttons-1">Portoflio</a>
