Fix Eslint Problem

--- a/index.html
+++ b/index.html
@@ -383,6 +383,9 @@
                         <li class="use el">html</li>
                         <li class="use el">css</li>
                         <li class="use el">javaScript</li>
+                        <li class="use el mob-hid">github</li>
+                        <li class="use el mob-hid">ruby</li>
+                        <li class="use el mob-hid">bootstrap</li>
                     </ul>  
 
                     <div id="btns-container">
