Fix img of the btns

--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
                     </ul>  
 
                     <div id="btns-container">
-                        <button class="modal-btn live-link">See live  <img src="/images/LiveIcon.png" > </button>
-                        <button class="modal-btn source-code">See Source  <img src="/images/GithubVector.png" > </button>
+                        <button class="modal-btn live-link">See live  <img src="images/LiveIcon.png" > </button>
+                        <button class="modal-btn source-code">See Source  <img src="images/GithubVector.png" > </button>
                     </div>
                 </div>
             </div>
